--- a/layout/_partial/after-footer.ejs
+++ b/layout/_partial/after-footer.ejs
@@ -29,7 +29,7 @@
                                     <% if (theme.mathjax){ %>
                                         <%- partial('mathjax') %>
                                             <script>
-                                                var ayerConfig = {
+                                                var Config = {
                                                     mathjax: true,
                                                 };
                                             </script>
