--- a/layout/_partial/head.ejs
+++ b/layout/_partial/head.ejs
@@ -12,7 +12,7 @@
                 <meta name="viewport" Content="width=device-width, initial-scale=1.0, minimum-scale=0.5, maximum-scale=2.0, user-scalable=yes" />
                 <meta name="description" content="<%= config.description %>">
                 <meta name="keywords" content="<%= config.keywords %>">
-                <link rel="shortcut icon" href="/img/favicon.png" type="image/x-icon">
+                <link rel="shortcut icon" href="/images/favicon.png" type="image/x-icon">
                 <title>
                     <% if (title){ %>
                         <%= title %> |
