--- a/source-src/css/style.styl
+++ b/source-src/css/style.styl
@@ -57,7 +57,7 @@ button
 @import "_partial/lists"
 @import "_partial/categories"
 @import "_partial/tag"
-@import "_partial/ayer"
+@import "_partial/bilibili"
 @import "_partial/search"
 @import "_partial/article"
 @import "_partial/articles"
